--- a/app/src/main/res/layout/taskadapterlayout.xml
+++ b/app/src/main/res/layout/taskadapterlayout.xml
@@ -5,6 +5,15 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
+
+    <TextView
+        android:id="@+id/textID"
+        android:textStyle="bold"
+        android:textSize="20sp"
+        android:textColor="@android:color/black"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"  />
+
     <TextView
         android:id="@+id/textName"
         android:textStyle="bold"
